Get it working with n players

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     border: 1px solid #000;
     position: absolute;
   }
-  .plyr {
+  .player {
     height: 20px;
     width: 20px;
     border-radius: 10px;
@@ -26,8 +26,6 @@
 </head>
 <body>
   <div id="board" class="board">
-    <div id="plyr1" class="plyr"></div>
-    <div id="plyr2" class="plyr"></div>
   </div>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
