--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
   <div id="board" class="board">
   </div>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+  <script src="/tethr.io.js"></script>
   <script src="js/simplegame.js"></script>
 </body>
 </body>
